--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="utf-8" />
-  <title>Bảng Thông Báo BTVN - Full</title>
+  <title>Bảng Thông Báo BTVN - 22/9/2025</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     :root {
@@ -295,7 +295,7 @@
       </div>
 
       <div class="changelog" style="margin-top:14px;">
-        <strong>Changelog (V2.3.)</strong>
+        <strong>Changelog (V2.3.2)</strong>
         <ul>
           <li>Cập nhật Toán học [Số]</li>
           <li>Cập nhật Lịch sử</li>
@@ -306,6 +306,7 @@
           <li>Sửa vài thứ khác</li>
           <li>Sửa đổi giao diện gọn hơn cho web PC</li>
           <li>Sửa đổi lịch trực nhật và TKB sẽ ở dưới cùng khi dùng điện thoại</li>
+          <li>Sửa đổi vị trí các nút</li>
         </ul>
       </div>
     </div>
