Update index V2.6 Fixed [DEV].html

--- a/index.html
+++ b/index.html
@@ -525,11 +525,11 @@ body.dark .menu-panel a.donate-btn:hover {
 
     const TKB = {
         0: ["Chủ nhật: Nghỉ / Tự học"],
-        1: ["HĐTN,HN", "LS&ĐL - Sử", "Tiếng anh", "LS&ĐL - Địa lí", "Toán học - đại số"],
+        1: ["HĐTN,HN(CC)", "LS&ĐL - lịch sử", "Tiếng anh", "LS&ĐL - Địa lí", "Toán học - đại số"],
         2: ["Văn học", "Tiếng anh", "Công nghệ", "HĐTN,HN", "GDTC"],
-        3: ["Văn học", "Toán học - Hình học", "KHTN - Vật lý", "NT - Mĩ thuật", "KHTN - Sinh học"],
-        4: ["Toán học - đại Số", "Tin học", "LS&ĐL - Lịch sử", "Âm nhạc", "Tiếng anh"],
-        5: ["GDĐP", "Văn học", "HĐTN,HN", "Toán học", "Giáo dục công dân"],
+        3: ["Văn học", "Toán học - hình học", "KHTN - Vật lý", "NT - Mĩ thuật", "KHTN - Sinh học"],
+        4: ["Toán học - đại Số", "Tin học", "LS&ĐL - lịch sử", "Âm nhạc", "Tiếng anh"],
+        5: ["GDĐP", "Văn học", "HĐTN,HN", "Toán học - hình học", "Giáo dục công dân"],
         6: ["KHTN - Sinh học", "GDTC", "Văn học", "KHTN - Hóa học", "Nghỉ"]
     };
 
