--- a/index.html
+++ b/index.html
@@ -580,8 +580,8 @@
 
             <h2>🇬🇧 Tiếng Anh(Global success)</h2>
             <ul>
-                <li>Làm nốt bài 4</li>
-                <li>Ôn lại cách công thức</li>
+                <li>Làm nốt bài 4(Sách trang 22)</li>
+                <li>Ôn lại cách công thức(Bài cũ cho nhớ)</li>
             </ul>
 
             <h2>👥 Công dân</h2>
@@ -625,6 +625,7 @@
                     <li>Cập nhật Toán học (Hình học)</li>
                     <li>Cập nhật Lịch sử</li>
                     <li>Sửa HĐTN</li>
+                    <li>Sửa Tiếng Anh</li>
                     <li>Cập nhật Ngữ văn</li>
                     <li>Sửa một vài thứ khác</li>
                 </ul>
